# supa-silk

./: README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/job-swipe/: page.tsx
app/protected/: page.tsx
app/protected/account-info/: page.tsx
app/protected/saved-jobs/: page.tsx
app/supabase/: config.toml
components/: UserDropdown.tsx
components/buttons/: CircleIcon.jsx  CollapsibleDropdown.jsx  DropdownFilter.css  DropdownFilter.jsx  ResumeUpload.tsx
components/cards/: JobCard.css  JobCard.jsx  JobDetailCard.css
components/data/: mockAdzunaJobs.js  mockJobs.js
components/pages/: AccountPage.tsx  FilterSection.jsx  JobSwipePage.css  JobSwipePage.jsx  LandingPage.css  LandingPage.jsx  SavedJobsList.tsx  recentJobs.tsx
components/ui/: NavBar.tsx  VisuallyHiddenInput.tsx
package-lock-backups/: package-lock_BACKUP_424.json  package-lock_BASE_1365.json  package-lock_LOCAL_999.json  package-lock_REMOTE_1901.json
silkdeploy/: README.md  edgefunction.tsx  pyproject.toml
silkdeploy/adk_silk_bot/: agent.py  prompt.py
silkdeploy/adk_silk_bot/tools/: __init__.py  doc_parse.py
silkdeploy/deployment/: local.py  remote.py
