[project]
name = "adk-silk-bot"
version = "0.1.0"
description = "A bot that tokenizes user's resumes into a set of tokens to populate job search filters."
authors = [
    {name = "Isaac Garibay", email="isaacxg59@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
requests = "^2.31.0"
google-adk = "^0.1.0"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = {extras = ["adk", "agent_engines"], version = "^1.42.1"}
absl-py = "^2.1.0"
cloudpickle = "^3.0.0"
pdfplumber = "0.11.6"
pdfminer-six = "20250327"
markdownify = "0.11.6"


[tool.poetry.scripts]
adk-silk-bot = "adk_silk_bot:app"
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 
